# Process this file with autoconf to produce a configure script.
AC_INIT(diffball, 0.4_pre3, bdharring@wisc.edu)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
# Checks for programs.
AC_PROG_CC

# toggling debug support.
#AC_DEFINE(DEBUG_CFILE, 1, Toggle on cfile debug messages.)
#AC_DEFINE(DEV_VERSION, 1, Toggle on asserts.)
#AC_DEFINE(DEBUG_HASH, 1, Toggle on extra hash tests and messages.)

# Checks for libraries.
AC_CHECK_LIB(popt, poptGetContext)
AC_CHECK_LIB(crypto, EVP_get_digestbyname)
AC_CHECK_LIB(bz2, BZ2_bzCompressInit)
AC_CHECK_LIB(z, gzdopen)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([errno.h fcntl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_STAT
AC_CHECK_FUNCS([dup2 memmove strnlen strtol memset realloc])

#AC_CONFIG_FILES([])
AC_OUTPUT(Makefile)
